# gengine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  main.cpp
cmake_modules/: FindPhysX.cmake  FindSDL2.cmake
demo/: CMakeLists.txt  boxes-pbr.cpp  boxes.cpp  hw1-human.cpp  hw2-bvh.cpp  hw3-ik.cpp  hw4-fsm.cpp  imgui.ini  main.cpp  physx.cpp  plot-example.cpp  plot.cpp  spheres-pbr.cpp  trackball.cpp
demo/resources/: carry.bvh  humanoid.xml  pick_up.bvh  readme.txt
demo/resources/motion/cmu/: 16_01_jump.bvh  16_02_jump.bvh  16_03_high jump.bvh  16_04_high jump.bvh  16_05_forward jump.bvh  16_06_forward jump.bvh  16_07_forward jump.bvh  16_08_run&jog, sudden stop.bvh  16_09_forward jump.bvh  16_10_forward jump.bvh  16_11_walk, veer left.bvh  16_12_walk, veer left.bvh  16_13_walk, veer right.bvh  16_14_walk, veer right.bvh  16_15_walk.bvh  16_16_walk.bvh  16_17_walk, 90-degree left turn.bvh  16_18_walk, 90-degree left turn.bvh  16_19_walk, 90-degree right turn.bvh  16_20_walk, 90-degree right turn.bvh  16_21_walk.bvh  16_22_walk.bvh  16_23_walk, veer left.bvh  16_24_walk, veer left.bvh  16_25_walk, veer right.bvh  16_26_walk, veer right.bvh  16_27_walk, 90-degree left turn.bvh  16_28_walk, 90-degree left turn.bvh  16_29_walk, 90-degree right turn.bvh  16_30_walk, 90-degree right turn.bvh  16_31_walk.bvh  16_32_walk.bvh  16_33_slow walk, stop.bvh  16_34_slow walk, stop.bvh  16_35_run&jog.bvh  16_36_run&jog.bvh  16_37_run&jog, veer left.bvh  16_38_run&jog, veer left.bvh  16_39_run&jog, veer right.bvh  16_40_run&jog, veer right.bvh  (+18 more)
demo/resources/motion/mrl/: tpose2.bvh  walk_fast_stright.bvh  walk_normal_left_135.bvh  walk_normal_left_180.bvh  walk_normal_left_45.bvh  walk_normal_left_90.bvh  walk_normal_right_135.bvh  walk_normal_right_180.bvh  walk_normal_right_45.bvh  walk_normal_right_45_1.bvh  walk_normal_right_90.bvh  walk_normal_stright.bvh  walk_normal_style_1.bvh  walk_normal_style_2.bvh  walk_normal_style_3.bvh  walk_normal_style_4.bvh  walk_slow_stright.bvh
demo/resources/motion/new/: Trial001.bvh  Trial002.bvh  Trial004.bvh  Trial005.bvh  Trial006.bvh  Trial007.bvh  Trial008.bvh  Trial009.bvh  Trial010.bvh  Trial011.bvh  Trial012.bvh  Trial013.bvh  Trial014.bvh  Trial015.bvh  Trial016.bvh  Trial017.bvh  Trial018.bvh  Trial020.bvh  Trial021.bvh  Trial022.bvh  Trial023.bvh  Trial024.bvh
gengine/: AnimStateMachine.cpp  AnimStateMachine.h  App.cpp  App.h  Arena.cpp  Arena.h  C3DPlayer.cpp  C3DPlayer.h  CMakeLists.txt  Camera.cpp  Camera.h  Colors.h  DebugRenderer.cpp  DebugRenderer.h  Defer.h  FlyCamera.cpp  FlyCamera.h  GLUtils.cpp  GLUtils.h  GenAllocator.cpp  GenAllocator.h  GizmosRenderer.cpp  GizmosRenderer.h  IDisposable.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  LineMesh.cpp  LineMesh.h  LineMesh2D.cpp  LineMesh2D.h  LineMesh3D.cpp  LineMesh3D.h  Material.h  Mesh.cpp  Mesh.h  MotionClipData.cpp  MotionClipData.h  MotionClipPlayer.cpp  (+32 more)
gengine/anim/: AnimStateMachine.cpp  AnimStateMachine.h  BVHData.cpp  BVHData.h  MotionClip.h  PoseFK.cpp  PoseFK.h  PoseIK.cpp  PoseIK.h  PoseTree.h
gengine/glmx/: eigen.h  eigen_raw.h  euler.h  interp.h  pose.cpp  pose.h  quat.h  rect.h  transform.h
gengine/imguix/: imgui_plot.h
gengine/physx/: PhysXDebugRenderer.cpp  PhysXDebugRenderer.h  PhysXGLM.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  PosePhysicsBody.cpp  PosePhysicsBody.h  PosePhysicsBodySkel.cpp  PosePhysicsBodySkel.h
gengine/plot/: implot.cpp  implot.h  implot_window.h
gengine/resources/: Example1.bvh  Trial001.bvh  Trial002.bvh  Trial004.bvh  cmu_07_02_1.bvh  dribble_test.bvh  run_merged_rtg_Take_001.bvh  walk_merged_rtg_Take_001.bvh
gengine/serialize/: from_json.cpp  from_json.h  to_json.cpp
gengine/shaders/: colorline3d.frag  colorline3d.vert  colorpoint3d.vert  depth.frag.h  depth.vert  depth.vert.h  depth_debug.frag.h  depth_debug.vert.h  embed_shader.cpp  line2d.frag.h  line2d.vert  line2d.vert.h  line3d.frag.h  line3d.vert  line3d.vert.h  pbr.frag  pbr.vert  phong.frag  phong.frag.h  phong.vert  phong.vert.h  phong_shadows.frag  phong_shadows.frag.h  phong_shadows.vert  phong_shadows.vert.h  physx_debug.vert  plot_line2d.vert  plot_point2d.frag  plot_point2d.vert  point.frag  point.frag.h  point.vert  point.vert.h
gengine/tests/: CMakeLists.txt  main.cpp
viewer/: CMakeLists.txt  imgui.ini  main.cpp
