add_executable(gengine_demo_boxes boxes.cpp)
target_include_directories(gengine_demo_boxes PUBLIC gengine)
target_link_libraries(gengine_demo_boxes gengine)

add_executable(gengine_demo_trackball trackball.cpp)
target_include_directories(gengine_demo_trackball PUBLIC gengine)
target_link_libraries(gengine_demo_trackball gengine)
